@@ -660,6 +660,13 @@
                                                 <div class="col s1"><a class="btn-floating waves-effect waves-light tooltipped" data-position="left" data-delay="50" data-tooltip="Amount of linear effort falloff experienced along river features."><i>?</i></a></div>
                                         </div>
                                 </li>
+                                <li class="collection-item advancedColItem" id="riverSpeedContainer">
+                                        <div class="row" style="margin-bottom: 0;">
+                                                <div class="col s8"><h5>River Speed Ratio:</h5></div>
+                                                <div class="col s3"><input type="text" id="riverSpeedRatio" style="margin-bottom: 0;"></div>
+                                                <div class="col s1"><a class="btn-floating waves-effect waves-light tooltipped" data-position="left" data-delay="50" data-tooltip="How many times faster than walking is traveling via river."><i>?</i></a></div>
+                                        </div>
+                                </li>
                         </ul>
 
                 </div>
