@@ -1,3 +1,4 @@
+12/3/18 v36 - New river math that attempts to model conservation of time. \n
 10/16/18 v35 - River support in UI and rewored preset options. \n 
 10/9/18 v34 - Experimental support for simulating the impact of rivers on effort distribution. \n
 9/4/18 v33a & b - Redesigned and added more graphs as well as moved the other info table. \n
